Fixes migration to Angular 9 and upgrades to ag-grid 23 and primeng 9 - Datepicker shift+tab not working - Spinner cell editor not refreshing the second time - Protect null pointers in context menu - Add new cases to showcase for context menu

--- a/projects/systelab-components/sass/_agGrid.scss
+++ b/projects/systelab-components/sass/_agGrid.scss
@@ -131,6 +131,10 @@ $icon-rowaction-font-size: 20px;
 
   }
 
+  .ag-header-cell, .ag-header-group-cell {
+    border-right: 1px solid white;
+  }
+
   .ag-body-viewport {
     //overflow: auto !important;
     @include ag-row()
